--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -20,6 +20,7 @@ flutter:
   uses-material-design: true
   
   assets:
+    - assets/icons/seta_esquerda.svg
     - assets/images/
     - assets/icons/
   
