Criação do dashboard, tela registrar alimentos, alteração no sistema de áudio.

--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -21,8 +21,8 @@ flutter:
   
   assets:
     - assets/icons/seta_esquerda.svg
-    - assets/images/
     - assets/icons/
+    - assets/icons_bar/
   
   fonts:
     - family: Poppins
