--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   animated_text_kit: ^4.2.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
