--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter_svg: ^2.0.17
   animated_text_kit: ^4.2.2
   http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
