--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.2.2
+  provider: ^6.0.5
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   animated_text_kit: ^4.2.2
