--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   animated_text_kit: ^4.2.2
   http: ^1.3.0
   intl: ^0.20.2
+  path_provider: ^2.1.1
+  permission_handler: ^11.3.1
+  file_picker: ^6.1.1
+  record: ^5.0.4
+  just_audio: ^0.9.35
 
 dev_dependencies:
   flutter_test:
