--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.1
   permission_handler: ^11.3.1
-  file_picker: ^6.1.1
+  file_picker: 10.1.9
   record: ^5.0.4
   just_audio: ^0.9.35
 
