--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   file_picker: 10.1.9
   record: ^5.0.4
   just_audio: ^0.9.35
+  dio: ^5.4.0
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
