--- a/alimenta_ai/pubspec.yaml
+++ b/alimenta_ai/pubspec.yaml
@@ -16,16 +16,24 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.1
   permission_handler: ^11.3.1
-  file_picker: 10.1.9
+  file_picker: ^10.1.9
   record: ^5.0.4
   just_audio: ^0.9.35
   dio: ^5.4.0
   mime: ^1.0.4
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
+  flutter_driver:
+    sdk: flutter
+  integration_test:
+    sdk: flutter
+  test: ^1.24.9
 
 flutter:
   uses-material-design: true
